# MyoPy

./: LICENSE  README.md  __init__.py  epochs.py  events.py  info.py  mixin.py  pyproject.toml  raw.py  requirements.txt
algorithms/: __init__.py  eventDetection.py
datasets/: 01-01.txt  01-02.txt  01-03.txt
emg/: __init__.py  features.py
io/: __init__.py  base.py
io/tables/: __init__.py  tables.py
src/myopy/: __init__.py  epochs.py  info.py  raw.py
src/myopy/algorithms/: detection.py
src/myopy/io/: __init__.py  base.py  utils.py
src/myopy/io/tables/: __init__.py  tables.py
src/myopy/viz/: plotter.py
viz/: __init__.py  plotter.py
