[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MyoPy"
version = "0.0.1"
authors = [
  { name="Adrian Kossmann", email="adrian.kossmann@posteo.de" },
]
description = "A Python package for preprocessing and"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/k0ssmann/MyoPy"
Issues = "https://github.com/k0ssmann/MyoPy/issues"